increase thumbnail height to stop jumping

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -85,10 +85,10 @@
     margin-bottom: 20px;
 }
 
-.post-thumbnail, .project-thumbnail  {
+/* .post-thumbnail, .project-thumbnail  {
 
     min-height: 240px;
-}
+} */
 
 
 }
